Introduce bisq.core module and Component hierarchy
