# client/oas/api/openapi.yaml
@@ -49,7 +49,7 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/CategorySpec'
+                  $ref: '#/components/schemas/LoggingCategory'
                 type: array
           description: getCategories 200 response
       tags:
@@ -88,7 +88,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CategorySpec'
+                $ref: '#/components/schemas/LoggingCategory'
           description: getCategory 200 response
       tags:
       - Logging
@@ -175,21 +175,6 @@ paths:
       - application/json
 components:
   schemas:
-    CategorySpec:
-      example:
-        level: level
-        name: name
-      properties:
-        name:
-          minLength: 1
-          type: string
-        level:
-          minLength: 1
-          type: string
-      required:
-      - level
-      - name
-      type: object
     Identity:
       properties:
         nym:
@@ -207,6 +192,21 @@ components:
           type: string
       required:
       - version
+      type: object
+    LoggingCategory:
+      example:
+        level: level
+        name: name
+      properties:
+        name:
+          minLength: 1
+          type: string
+        level:
+          minLength: 1
+          type: string
+      required:
+      - level
+      - name
       type: object
     Offer:
       example:
@@ -229,8 +229,8 @@ components:
       type: object
     updateCategory_request:
       properties:
-        categorySpec:
-          $ref: '#/components/schemas/CategorySpec'
+        loggingCategory:
+          $ref: '#/components/schemas/LoggingCategory'
       type: object
     add_request:
       properties:
